patch method now updates the user's game time
